[checked with sonar] add comment & remove trailing comments

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,6 +4,7 @@ sonar.projectName=Test
 sonar.projectVersion=1.0
 
 sonar.modules=Calculator
+sonar.modules=Part1
 sonar.sourceEncoding=UTF-8
 sonar.language=java
 
@@ -11,3 +12,8 @@ Calculator.sonar.projectName=Calculator
 Calculator.sonar.projectKey=Test:Calculator
 Calculator.sonar.sources=src
 Calculator.sonar.projectBaseDir=Calculator
+
+Part1.sonar.projectName=Part1
+Part1.sonar.projectKey=Test:Part1
+Part1.sonar.sources=src
+Part1.sonar.projectBaseDir=Part1
