--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,6 +5,7 @@ sonar.projectVersion=1.0
 
 sonar.modules=Calculator
 sonar.modules=Part2
+sonar.modules=Part3
 sonar.sourceEncoding=UTF-8
 sonar.language=java
 
@@ -17,3 +18,8 @@ Part2.sonar.projectName=Part2
 Part2.sonar.projectKey=Test:Part2
 Part2.sonar.sources=src
 Part2.sonar.projectBaseDir=Part2
+
+Part3.sonar.projectName=Part3
+Part3.sonar.projectKey=Test:Part3
+Part3.sonar.sources=src
+Part3.sonar.projectBaseDir=Part3
