--- a/Part4/build.xml
+++ b/Part4/build.xml
@@ -1,4 +1,4 @@
-<project name="Part3" default="main" basedir=".">
+<project name="Part4" default="main" basedir=".">
     <property name="src.dir" value="src"/>
     <property name="build.dir" value="build"/>
     <property name="lib.dir" value="lib"/>
@@ -8,7 +8,7 @@
     <property name="jar.dir" value="${build.dir}/jar"/>
     <property name="report.dir" value="${build.dir}/report"/>
 
-    <property name="main-class" value="ChameleonRunner"/>
+    <property name="main-class" value="ChameleonKidRunner"/>
 
     <path id="application" location="${jar.dir}/${ant.project.name}.jar"/>
 
