--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,6 +6,7 @@ sonar.projectVersion=1.0
 sonar.modules=Calculator
 sonar.modules=Part2
 sonar.modules=Part3
+sonar.modules=Part4
 sonar.sourceEncoding=UTF-8
 sonar.language=java
 
@@ -23,3 +24,8 @@ Part3.sonar.projectName=Part3
 Part3.sonar.projectKey=Test:Part3
 Part3.sonar.sources=src
 Part3.sonar.projectBaseDir=Part3
+
+Part4.sonar.projectName=Part4
+Part4.sonar.projectKey=Test:Part4
+Part4.sonar.sources=src
+Part4.sonar.projectBaseDir=Part4
