finish HashMap version of sparse bounded grid

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,6 +7,7 @@ sonar.modules=Calculator
 sonar.modules=Part2
 sonar.modules=Part3
 sonar.modules=Part4
+sonar.modules=Part5
 sonar.sourceEncoding=UTF-8
 sonar.language=java
 
@@ -29,3 +30,8 @@ Part4.sonar.projectName=Part4
 Part4.sonar.projectKey=Test:Part4
 Part4.sonar.sources=src
 Part4.sonar.projectBaseDir=Part4
+
+Part5.sonar.projectName=Part5
+Part5.sonar.projectKey=Test:Part5
+Part5.sonar.sources=src
+Part5.sonar.projectBaseDir=Part5
