--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,11 +3,7 @@ sonar.projectKey=Test
 sonar.projectName=Test
 sonar.projectVersion=1.0
 
-sonar.modules=Calculator
-sonar.modules=Part2
-sonar.modules=Part3
-sonar.modules=Part4
-sonar.modules=Part5
+sonar.modules=Calculator,Part2,Part3,Part4,Part5
 sonar.sourceEncoding=UTF-8
 sonar.language=java
 
