--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,8 @@ sonar.projectKey=Test
 sonar.projectName=Test
 sonar.projectVersion=1.0
 
-sonar.modules=Calculator,Part2,Part3,Part4,Part5
+#sonar.modules=Calculator,Part2,Part3,Part4,Part5
+sonar.modules=Calculator
 sonar.sourceEncoding=UTF-8
 sonar.language=java
 
