--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,9 +2,10 @@
 sonar.projectKey=Test
 sonar.projectName=Test
 sonar.projectVersion=1.0
+sonar.exclusions=**/*Runner.java
 
-#sonar.modules=Calculator,Part2,Part3,Part4,Part5
-sonar.modules=Calculator
+sonar.modules=Calculator,Part2,Part3,Part4,Part5
+#sonar.modules=Part2
 sonar.sourceEncoding=UTF-8
 sonar.language=java
 
